sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:15: error: unclosed character literal
    if (continue == 0){return}'
                              ^AlgCocktailSort1:15: error: ';' expected but something found.
    if (continue == 0){return}'
                              ^